# timescano

./: .replit  README.md  app.py  pyproject.toml  requirements.txt  updates.md
attached_assets/: Pasted-1-Landing-Page-Signup-Only-for-Superuser-Creates-Organization--1754293053986_1754293053987.txt  Pasted-1-The-user-first-lands-on-the-homepage-of-the-web-app-On-this-landing-page-there-are-two-primary--1754293441055_1754293441055.txt  Pasted-The-user-first-lands-on-the-homepage-of-the-web-app-On-this-landing-page-there-are-two-primary-opt-1754293325407_1754293325407.txt
static/: style.css
templates/: admin_session_detail.html  base.html  checkout.html  home.html  login.html  plans.html  register.html  superuser_dashboard.html  superuser_user_detail.html  user_session_detail.html
templates/admin/: dashboard.html
templates/user/: dashboard.html
utils/: db.py
videos/: temp_688245153869dcb59e7cc26d.avi
